# SZE-MOSZE-2020-Daemons

./: .gitignore  .scenario1.json.swp  Blood_Raven.json  CMakeCache.txt  CharacterSVGRenderer.cpp  CharacterSVGRenderer.h  CharacterSVGRenderer_8h_source.html  Control.cpp  Control.h  Control_8h_source.html  Damage.h  Damage_8h_source.html  Dark_Wanderer.json  Documentation_generate.sh  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  HeroTextRenderer.cpp  HeroTextRenderer.h  HeroTextRenderer_8h_source.html  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  JsonParser_8h_source.html  Main.cpp  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  (+133 more)
.github/: unit_test.yml
Docker/: Dockerfile
good_outputs/: unit2-unit3.txt
hero_mons/: Dark_Wanderer.json  Fallen.json  Zombie.json
scnario/: scenario1.json  scenario2.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  (+55 more)
test/: .gitignore  CMakeCache.txt  CMakeLists.txt  JsonParser_test.cpp  Makefile  all_unittests.cpp  cmake_install.cmake  coreunit_test  edge_case.json  generate_outputs.sh  good_outputs.txt  maptest.txt  messedup_keys.json  missing_keys.json  outputs.txt  parserTest  test_outputs.sh
test/good_outputs/: unit1-unit2.txt  unit2-unit1.txt  unit3-unit1.txt  unit3-unit2.txt
test/outputs/: unit1-unit2.txt
test/units/: Blood_Raven.json  edge_case.json  scenario1.json  scenario2.json  unit1.json  unit2.json  unit3.json
(+6 files in other folders)
